--- a/top5.sass
+++ b/top5.sass
@@ -1,23 +1,4 @@
-.right-item
-    color: #999
-    background: white
-    background-image: none
-    width: 100% !important
-    background-color: white
-    margin-bottom: 10px
-    padding: 10px 0 0 0
-    border-bottom: 3px solid #e1e1e1
-    box-shadow: 0 0 5px 0 #e2e3e1
-    box-sizing: border-box
-    border-radius: 15px
-    &__heading
-        color: #999
-        padding: 10px 0 7px 10px
-        margin: 8px 0 -2px 0
-        background: transparent !important
-        padding-top: 0
-        padding-bottom: 10px
-.top5-item
+.top5
     padding: 0 10px 5px 10px
     color: black
     background: transparent !important
@@ -58,11 +39,11 @@
         padding-left: 100px
         box-sizing: border-box
         text-align: left
-.top5__bottom
+    &__bottom
     padding: 20px 0 20px 0
     text-align: center
     border-top: 1px solid #eff0f0
     background: transparent !important
-    &-button
-        color: #e1685c
-        text-decoration: none
+        &-button
+            color: #e1685c
+            text-decoration: none
